# term2term

./: .gitignore  Cargo.toml  Makefile  README.md  cargo.toml  justfile
.designdoc/: plan.md
.github/workflows/: fly.yml  rust_build.yml
.notes/: desgin.tex  new_plans.md  plan.md
.notes/impl_plans/: args.md  init.md  messaging.md  sample.toml  security.md
.old/.trying_stuff/: README.md
.old/.trying_stuff/go/: go.mod  main.go
.old/.trying_stuff/go/proto/: helloworld.pb.go  helloworld_grpc.pb.go
.old/.trying_stuff/proto/: helloworld.proto
.old/.trying_stuff/rs/: Cargo.toml
.old/client/: Cargo.toml  build.rs
.old/client/src/core/: message.rs
.old/client/src/file/: state.rs
.old/server/: Dockerfile  fly.toml  go.mod  go.sum
.old/server/proto/: t2t.pb.go  t2t_grpc.pb.go
.trying_stuff/: README.md
.trying_stuff/go/: go.mod  main.go
.trying_stuff/go/proto/: helloworld.pb.go  helloworld_grpc.pb.go
.trying_stuff/proto/: helloworld.proto  helloworld_grpc.pb.go
.trying_stuff/rs/src/: client.rs
client/: Cargo.toml  thoughts_rust.md
client/src/: api.rs  cli.rs  config.rs  initialize.rs  lib.rs  main.rs  state.rs  tui.rs
client/src/core/: convo.rs  message.rs  mod.rs  user.rs
client/src/file/: config.rs  paths.rs  state.rs
designdoc/: desgin.tex
docker/: docker-compose.yml
go/: Dockerfile  fly.toml  go.mod  go.sum
go/cmd/t2tServer/: t2tServer.go
go/cmd/t2tdbman/: t2tdbman.go
go/internal/convert/: convert.go
go/internal/db/: db.go
go/pkg/middleware/: dbmiddle.go  panic.go
go/pkg/server/: convoServer.go  msgServer.go  server.go  userServer.go
go/proto-gen/: convo.pb.go  convo_grpc.pb.go  msg.pb.go  msg_grpc.pb.go  user.pb.go  user_grpc.pb.go
hermes/: Cargo.toml  Dockerfile  build.rs
hermes/migration/src/: lib.rs  m20240824_010034_create_user_table.rs  m20240824_010041_create_conversation_table.rs  m20240824_045520_create_userconvo_table.rs  m20240824_184203_add_default_values_to_all.rs
hermes/migrations/: 20241031043407_init.sql  20241103203321_add_password_to_user.sql  20241103210621_add_email_to_user.sql  20241103210926_unique_email.sql  20241108052226_messages_modifications.sql  20241108082604_add_body_to_messages.sql  20241108082830_edit_id_of_messages.sql
hermes/src/: db.rs  lib.rs  main.rs
hermes/src/config/: mod.rs
hermes/src/entities/: conversation.rs  message.rs  mod.rs  user.rs  user_convo.rs
hermes/src/middleware/: auth.rs
hermes/src/middleware/auth/: authenticator.rs  interceptor.rs  mod.rs
hermes/src/services/: auth.rs  conversation.rs  message.rs  mod.rs  user.rs
hermes/src/utils/: id.rs  log.rs  mod.rs
hermes/tests/: message_test.rs
hermes/tests/common/: db.rs
proto/: auth.proto  conversation.proto  convo.proto  message.proto  msg.proto  shared.proto  user.proto
rs/: Cargo.toml  build.rs
rs/src/: error.rs  lib.rs  prelude.rs
rs/src/app/: app.rs
rs/src/cli/: args.rs  cli.rs  mod.rs
rs/src/client/: client.rs  mod.rs  user.rs
rs/src/files/: cache.rs  config.rs  mod.rs  paths.rs  state.rs
rs/src/utils/: froms.rs
rs/src/utils/froms/: convo.rs  mod.rs  user.rs
server/: Dockerfile  fly.toml  go.mod  go.sum  main.go  thoughts_go.md
server/cmd/t2tServer/: t2tServer.go
server/cmd/t2t_server/: t2t_server.go
server/internal/api/: api.go
server/internal/apiserver/: apiserver.go  convoHandler.go  msgHandler.go  routes.go  userHandler.go
server/internal/config/: config.go
server/internal/db/: db.go  schema.go
server/internal/id/: id.go
server/internal/listen/: listen.go
server/test/api/: api_test.go
server/test/db/: db_test.go  test_db.json
server/test/listen/: listen_test.go
t2t/: .envrc  Cargo.toml  README.md  build.rs
t2t-cli/: Cargo.toml  build.rs
t2t-cli/src/: main.rs
t2t-cli/src/app/: app.rs
t2t-cli/src/cli/: cli.rs
t2t-cli/src/client/: client.rs
t2t-client/: Cargo.toml
t2t-client/src/: lib.rs  main.rs
t2t-client/src/components/: mod.rs
t2t-server/: Cargo.toml  build.rs  fly.toml
t2t-server/migration/src/: lib.rs  m20240824_010034_create_user_table.rs  m20240824_010043_create_message_table.rs  m20240824_010049_create_conversation_table.rs  m20240824_045520_create_userconvo_table.rs  m20240824_065155_add_default_values.rs
t2t-server/src/: lib.rs  main.rs
t2t-server/src/config/: mod.rs
t2t-server/src/entities/: conversation.rs  message.rs  mod.rs  prelude.rs  user.rs  user_convo.rs
t2t-server/src/services/: mod.rs  user.rs
t2t/.config/: config.toml
t2t/.github/workflows/: cd.yml  ci.yml
t2t/src/: action.rs  app.rs  config.rs  logging.rs  main.rs
t2t/src/client/: commands.rs  handlers.rs  mod.rs
t2t/src/components/: binds.rs  home.rs  mod.rs  welcome.rs
t2t/src/utils/: mod.rs
termcore/: Cargo.toml
termcore/src/: lib.rs
termcore/src/client/: mod.rs
(+5 files in other folders)
