[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.27.0"
dotenv = "0.15.0"
ratatui = "0.26.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
