# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "t2t"
version = "0.1.0"
authors = ["suri312006 suri312006@gmail.com"]
edition = "2021"

[[bin]]
name = "t2t"
path = "src/bin/t2t/main.rs"

[[bin]]
name = "t2t-gui"
path = "src/bin/t2t-gui/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
colored = "2.1.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
xdg-home = "1.2.0"

