[package]
name = "hermes"
version = "0.1.0"
edition = "2021"

[dependencies]
fern = "0.6.2"
log = "0.4.22"

prost = "0.13.1"
tonic = "0.12.1"
tonic-middleware = "0.2.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", ] }
tokio-stream = "0.1"
async-stream = "0.2"

sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-aws-lc-rs" ,"postgres", "macros", "migrate", "chrono"] }

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"

color-eyre = "0.6.3"

dotenvy = "0.15.7"
nanoid = "0.4.0"


bcrypt = "0.15.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"

[build-dependencies]
tonic-build = "0.12"
