[package]
name = "t2t"
version = "0.1.0"
authors = ["suri312006 suri312006@gmail.com"]
edition = "2021"

[[bin]]
name = "t2t"
path = "src/bin/t2t/main.rs"

[[bin]]
name = "t2t-tui"
path = "src/bin/t2t-tui/main.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-stream = "0.1"
async-stream = "0.2"

clap = { version = "4.5.7", features = ["derive"] }

colored = "2.1.0"

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"

toml = "0.8.14"
ron = "0.8"
toml_edit = "0.22.16"

xdg-home = "1.2.0"
derive_more = "0.99.18"
color-eyre = "0.6"

[build-dependencies]
tonic-build = "0.12"
