[package]
name = "t2t-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "t2t"
path = "src/bin/t2t/main.rs"

[[bin]]
name = "t2t-tui"
path = "src/bin/t2t-tui/main.rs"

[dependencies]
fern = "0.6.2"
log = "0.4.22"

prost = "0.13.1"
tonic = "0.12.1"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
async-stream = "0.2"

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
color-eyre = "0.6.3"

ratatui = "0.28.0"
clap = { version = "4.5.17", features = ["derive"] }
features = "0.10.0"
derive = "1.0.0"

[build-dependencies]
tonic-build = "0.12"
