[package]
name = "t2t-server"
version = "0.1.0"
edition = "2021"

[dependencies]
fern = "0.6.2"
log = "0.4.22"

prost = "0.13.1"
tonic = "0.12.1"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-stream = "0.1"
async-stream = "0.2"

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
color-eyre = "0.6.3"

sea-orm = { version = "1.0.0-rc.5", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print",
] }
dotenvy = "0.15.7"

[build-dependencies]
tonic-build = "0.12"
